--- a/tab-active-class/index.html
+++ b/tab-active-class/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
   
-  <div class="tab-container">
-    <div class="tabs">
-        <button class="tab-button active" onclick="openTab('tab1')">Tab 1</button>
-        <button class="tab-button" onclick="openTab('tab2')">Tab 2</button>
-        <button class="tab-button" onclick="openTab('tab3')">Tab 3</button>
-    </div>
-    <div class="tab-content" id="tab1" style="display: block;">This is the content of Tab 1.</div>
-    <div class="tab-content" id="tab2">This is the content of Tab 2.</div>
-    <div class="tab-content" id="tab3">This is the content of Tab 3.</div>
-</div>
+ <ul class="tabs-container">
+  <li><a data-tab="1" href="#" class="tab active">Text 1</a></li>
+  <li><a data-tab="2" href="#" class="tab">Text 2</a></li>
+  <li><a data-tab="3" href="#" class="tab">Text 3</a></li>
+ </ul>
+
+ <div class="content-container">
+  <div class="panel content-1 visible">tab content 1</div>
+  <div class="panel content-2">tab content 2</div>
+  <div class="panel content-3">tab content 3</div>
+ </div>
 
   <script src="scripts.js"></script>
 </body>
